# chat_platformer

./: Cargo.toml  index.html  run-wasm.sh
assets/: map.txt  map_1.ldtk
src/: ascii.rs  collisions.rs  debug.rs  finish_screen.rs  instruction.rs  level_select.rs  main.rs  mover.rs  player.rs  player_spawn.rs  stopwatch.rs  systems.rs  target.rs  text.rs  tilemap.rs  wall.rs
